fix visibility of list in navigation burger btn

--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -121,6 +121,7 @@
     list-style: none;
     text-align: center;
     z-index: 1500;
+    width: 100%;
   }
   &__item {
     margin: 1rem;
